--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -1,97 +1,25 @@
----
-title: "Probability Theory"
----
+# Given probabilities
+P_S <- 0.3
+P_not_S <- 0.7
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+P_T_given_S <- 0.2
+P_not_T_given_S <- 0.8
 
-This is a `.qmd` file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+P_T_given_not_S <- 0.6
+P_not_T_given_not_S <- 0.4
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+# Compute probabilities
+P_T_and_S <- P_S * P_T_given_S
+P_T_and_not_S <- P_not_S * P_T_given_not_S
+P_not_T_and_S <- P_S * P_not_T_given_S
+P_not_T_and_not_S <- P_not_S * P_not_T_given_not_S
 
-# Text Formatting
+# Sum of all four probabilities
+sum_of_probabilities <- P_T_and_S + P_T_and_not_S + P_not_T_and_S + P_not_T_and_not_S
 
-*italics* and **bold**
-
-superscript^2^ / subscript~2~
-
-~~strikethrough~~
-
-`verbatim code`
-
-> Blockquote
-
-# Headings
-
-## Header 2
-### Header 3
-#### Header 4
-##### Header 5
-###### Header 6
-
-# Links & Images
-
-<https://quarto.org>
-
-[Quarto](https://quarto.org)
-
-![Caption](../../assets/img/elephant.png)
-
-[![Caption](../../assets/img/elephant.png)](https://quarto.org)
-
-[![Caption](../../assets/img/elephant.png)](https://quarto.org "An elephant")
-
-
-# Lists
-
-* unordered list
-    + sub-item 1
-    + sub-item 2
-        - sub-sub-item 1
-        
-*   item 2
-
-    Continued (indent 4 spaces)
-    
-    
-1. ordered list
-2. item 2
-    i) sub-item 1
-         A.  sub-sub-item 1
-         
-(@)  A list whose numbering
-
-continues after
-
-(@)  an interruption
-
-# Tables
-
-| Right | Left | Default | Center |
-|------:|:-----|---------|:------:|
-|   12  |  12  |    12   |    12  |
-|  123  |  123 |   123   |   123  |
-|    1  |    1 |     1   |     1  |
-
-# Source Code
-
-Use ``` to delimit blocks of source code:
-
-```
-code
-```
-
-Add a language to syntax highlight code blocks:
-
-```{r}
-1 + 1
-```
-
-```{r}
-cars
-```
-
-```{r}
-plot(cars)
-```
+# Print the results
+cat("P(T ∩ S):", P_T_and_S, "\n")
+cat("P(T ∩ ~S):", P_T_and_not_S, "\n")
+cat("P(~T ∩ S):", P_not_T_and_S, "\n")
+cat("P(~T ∩ ~S):", P_not_T_and_not_S, "\n")
+cat("Sum of all four probabilities:", sum_of_probabilities, "\n")
