--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -57,13 +57,13 @@ P_Alarm_given_not_Faulty_prod <- 0.01
 P_Faulty_prod <- 0.04
 P_not_Faulty_prod <- 1 - P_Faulty_prod
 
-## Calculate P(Alarm)
+<!--  Calculate P(Alarm) --> 
 P_Alarm <- P_Alarm_given_Faulty_prod * P_Faulty_prod + P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod
 
-## Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem
+<!-- (1) Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem -->
 P_not_Faulty_prod_given_Alarm <- (P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod) / P_Alarm
 
-## Calculate P(Faulty_prod | Alarm) using Bayes' Theorem
+<!-- (2) Calculate P(Faulty_prod | Alarm) using Bayes' Theorem -->
 P_Faulty_prod_given_Alarm <- (P_Alarm_given_Faulty_prod * P_Faulty_prod) / P_Alarm
 
 ## Print the results
