--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -1,4 +1,4 @@
-# Assignment 1 (Probability Tree)
+# Assignment 1 - Probability Tree
 ## Given probabilities
 P_S <- 0.3
 P_not_S <- 0.7
@@ -25,7 +25,7 @@ cat("P(~T ∩ S):", P_not_T_and_S, "\n")
 cat("P(~T ∩ ~S):", P_not_T_and_not_S, "\n")
 cat("Sum of all four probabilities:", sum_of_probabilities, "\n")
 
-# Assignment 2 (Set Theory)
+# Assignment 2 - Set Theory
 ## From Diagram Venn
 
 library(knitr)
@@ -50,7 +50,7 @@ cat("Percentage of customers using all three devices:", percentage_all_three_dev
 cat("Percentage of customers using at least two devices:", percentage_at_least_two_devices, "%\n")
 cat("Percentage of customers using only one device:", percentage_only_one_device, "%\n")
 
-# Assignment 3 (Bayesian Theorem)
+# Assignment 3 - Bayesian Theorem
 ## Given probabilities
 P_Alarm_given_Faulty_prod <- 0.97
 P_Alarm_given_not_Faulty_prod <- 0.01
