--- a/content/01_journal/02_statistics.qmd
+++ b/content/01_journal/02_statistics.qmd
@@ -2,6 +2,51 @@
 title: "Statistical Concepts"
 ---
 
-::: callout-note
-You can delete everything in here and start fresh.
+
+random_vars <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/random_vars.rds")
+
+random_vars
+
+# Expected value, age
+expected_age <- mean(random_vars$age)
+expected_age
+
+# Expected value, income
+expected_income <- mean(random_vars$income)
+expected_income
+
+#variance, age
+variance_age <- var(random_vars$age)
+variance_age
+
+#variance, income
+variance_income <- var(random_vars$income)
+variance_income
+
+#std dev, age
+sd_age <- sd(random_vars$age)
+sd_age
+
+#std dev, income
+sd_income <- sd(random_vars$income)
+sd_income
+
+# Explain, if it makes sense to compare the standard deviations.
+
+#Then, examine the relationship between both variables and compute
+covariance <- cov(random_vars$age, random_vars$income)
+covariance
+correlation <- cor(random_vars$age, random_vars$income)
+correlation
+
+#Compute the conditional expected value for
+# Calculate mean for age <= 18
+mean_age_under_18 <- mean(random_vars$age[random_vars$age <= 18])
+mean_age_between_1865 <- mean(random_vars$age[random_vars$age >= 18 & random_vars$age <= 65])
+mean_age_above_65 <- mean(random_vars$age[random_vars$age >= 65])
+
+# Print the result
+cat("Mean age for age <= 18:", mean_age_under_18)
+cat("Mean age for 18<age<65:", mean_age_between_1865)
+cat("Mean age for age >= 65:", mean_age_above_65)
 :::
