--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -1,7 +1,39 @@
 ---
 title: "Regression and Statistical Inference"
 ---
+# Install and Load Libraries
+install.packages("tidyverse")
+install.packages("dplyr")
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+library(dplyr)
+library(tidyverse)
+
+# Load the Data
+car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
+
+# Analytics
+car_prices
+dim(car_prices)
+
+head (car_prices)
+
+summary(car_prices)
+
+# Include all potential regressors
+lm_all <- lm(price ~ ., data = car_prices)
+summary(lm_all)
+
+#signifance <0.05
+#choose one regressor : perubahan sekian unit (liat intercept) sbg coefficient/ slope to prices
+#peak rpm is a significant regressor, p < 0.0001
+
+
+car_prices <- car_prices %>%
+  mutate(seat_heating = TRUE)
+
+lm_all <- lm(price ~ ., data = car_prices)
+summary(lm_all)
+
+
+lm_seatheating <- lm(price ~ seat_heating, data = car_prices)
+summary(lm_seatheating)
