--- a/content/01_journal/05_dag.qmd
+++ b/content/01_journal/05_dag.qmd
@@ -2,6 +2,39 @@
 title: "Directed Acyclic Graphs"
 ---
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+# Load required libraries
+library(ggplot2)
+library(dplyr)
+library(tidyverse)
+
+# Load the data
+customer_sat <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/customer_sat.rds")
+
+customer_sat
+
+
+# Step 1: Regress satisfaction on follow_ups
+model1 <- lm(satisfaction ~ follow_ups, data = customer_sat)
+summary(model1)
+
+# Step 2: Regress satisfaction on follow_ups and account for subscription
+model2 <- lm(satisfaction ~ follow_ups + subscription, data = customer_sat)
+summary(model2)
+
+# Compare coefficients
+coef_comparison <- data.frame(
+  FollowUps_Only = coef(model1)[2],
+  FollowUps_Subscription = coef(model2)[2],
+  Subscription_Premium = coef(model2)[3],
+  Subscription_Elite = coef(model2)[4]
+)
+print(coef_comparison)
+
+# Plot the data
+ggplot(customer_sat, aes(x = follow_ups, y = satisfaction, color = subscription)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Relationship between Follow-up Calls and Satisfaction",
+       x = "Follow-up Calls",
+       y = "Satisfaction",
+       color = "Subscription Level")
