--- a/content/01_journal/06_rct.qmd
+++ b/content/01_journal/06_rct.qmd
@@ -2,6 +2,30 @@
 title: "Randomized Controlled Trials"
 ---
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+# Load required libraries
+library(ggplot2)
+library(dplyr)
+
+# Load the data
+abtest_online <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/abtest_online.rds")
+
+# Step 1: Check covariate balance across groups and plot
+covariate_balance_plot <- ggplot(abtest_online, aes(x = purchase_amount, color = as.factor(chatbot))) +
+  geom_density() +
+  labs(title = "Covariate Balance Check",
+       x = "Purchase Amount",
+       color = "Chatbot Group")
+
+print(covariate_balance_plot)
+
+# Step 2: Run regression to find the effect of chatbot on sales
+sales_regression <- lm(purchase_amount ~ chatbot + mobile_device + previous_visit, data = abtest_online)
+summary(sales_regression)
+
+# Step 3: Find subgroup-specific effects with interaction (exemplary group: mobile users)
+interaction_model <- lm(purchase_amount ~ chatbot * mobile_device + previous_visit, data = abtest_online)
+summary(interaction_model)
+
+# Step 4: Logistic regression for binary outcome (purchase)
+logistic_regression <- glm(purchase ~ chatbot + mobile_device + previous_visit, data = abtest_online, family = "binomial")
+summary(logistic_regression)
