--- a/content/01_journal/08_did.qmd
+++ b/content/01_journal/08_did.qmd
@@ -2,6 +2,42 @@
 title: "Difference-in-Differences"
 ---
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+# Load required libraries
+library(dplyr)
+library(readr)
+
+# Load the data
+hospdd <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/hospdd.rds")
+hospdd
+
+# Check the structure of the data
+str(hospdd)
+
+# Convert time variables to factors
+hospdd$month <- as.factor(hospdd$month)
+hospdd$hospital <- as.factor(hospdd$hospital)
+satisfaction <- hospdd$satis
+# Manually compute the mean satisfaction for treated and control hospitals before and after the treatment
+mean_satisfaction <- hospdd %>%
+  group_by(frequency, month) %>%
+  summarise(mean_satisfaction = mean(satisfaction))
+
+# Display the manual computation
+print("Manual Computation:")
+print(mean_satisfaction)
+
+# Perform difference-in-differences analysis using linear regression
+# Include group and time fixed effects
+
+# Option 1: Include as.factor(month) + as.factor(hospital)
+model1 <- lm(satisfaction ~ frequency * month + as.factor(month) + as.factor(hospital), data = hospdd)
+
+# Option 2: Include month + hospital
+model2 <- lm(satisfaction ~ frequency * month + month + hospital, data = hospdd)
+
+# Display the regression results
+print("Linear Regression Results (Option 1):")
+summary(model1)
+
+print("Linear Regression Results (Option 2):")
+summary(model2)
