--- a/content/01_journal/09_iv.qmd
+++ b/content/01_journal/09_iv.qmd
@@ -2,6 +2,30 @@
 title: "Instrumental Variables"
 ---
 
-::: callout-note
-You can delete everything in here and start fresh.
-:::
+#load Library
+install.packages(CAR)
+library(car)
+
+# Load the data
+rand_enc <- readRDS('E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/rand_enc.rds')
+
+# Compute the naive estimate
+naive_estimate <- lm(time_spent ~ rand_enc + used_ftr, data = rand_enc)
+summary(naive_estimate)
+
+# Check assumptions using correlations or plots
+cor(rand_enc$time_spent, rand_enc$rand_enc)
+cor(rand_enc$used_ftr, rand_enc$rand_enc)
+cor(rand_enc$time_spent, rand_enc$used_ftr)
+
+plot(rand_enc$time_spent ~ rand_enc$rand_enc)
+plot(rand_enc$time_spent ~ rand_enc$used_ftr)
+plot(rand_enc$used_ftr ~ rand_enc$rand_enc)
+
+# Instrumental Variable Estimation (2SLS)
+iv_estimate <- ivreg(time_spent ~ used_ftr | rand_enc ~ instrument, data = rand_enc)
+summary(iv_estimate)
+
+# Compare naive and IV estimates
+summary(naive_estimate)
+summary(iv_estimate)
