--- a/content/01_journal/07_matching.qmd
+++ b/content/01_journal/07_matching.qmd
@@ -1,3 +1,8 @@
+---
+title: "Matching and Subsclassifications"
+---
+
+
 # Load the Library
 
 library(Matching)
@@ -5,27 +10,22 @@ library(ggplot2)
 library(MatchIt)
 library(dplyr)
 library(MASS)
+library(dagitty)
 
 
 # Loacard the cardata
-membership <- reacardRcardS("E:/Master Stucardy/TUHH/Wise 23-24/Causal cardata Science for Business Analytics/Causal_cardata_Science_cardata/membership.rcards")
+membership <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal data Science for Business Analytics/Causal_data_Science_data/membership.rds")
 membership
-# Step 1: Check relationships between variables ancard cardraw a cardAG
-# (Note: You can manually create a cardAG using a software like 'cardagitty' or 'semPlot')
-# For simplicity, we'll use a simple example without all variables
-install.packages("cardagitty")
-library(cardagitty)
-install.packages("cem")
-library(cem)
 
-cardag <- cardagitty('cardag {
-  age -> plus_membership
-  sex -> plus_membership
-  pre_avg_purch -> plus_membership
-  plus_membership -> sales
+
+dag <- dagitty('dag {
+  age -> card_membership
+  sex -> card_membership
+  pre_avg_purch -> card_membership
+  card_membership -> avg_purch
 }')
 
-plot(cardag)
+plot(dag)
 
 # Step 2: Compute a naive estimate of the average treatment effect
 # Naive comparison
