--- a/content/01_journal/07_matching.qmd
+++ b/content/01_journal/07_matching.qmd
@@ -2,7 +2,6 @@
 title: "Matching and Subsclassifications"
 ---
 
-
 # Load the Library
 
 library(Matching)
@@ -13,7 +12,7 @@ library(MASS)
 library(dagitty)
 
 
-# Loacard the cardata
+# Load the data
 membership <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal data Science for Business Analytics/Causal_data_Science_data/membership.rds")
 membership
 
