--- a/content/01_journal/09_iv.qmd
+++ b/content/01_journal/09_iv.qmd
@@ -3,29 +3,73 @@ title: "Instrumental Variables"
 ---
 
 #load Library
-install.packages(CAR)
-library(car)
+library(tidyverse)
+library(rdd)
+library(estimatr)
+
 
 # Load the data
 rand_enc <- readRDS('E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/rand_enc.rds')
+head(rand_enc)
 
-# Compute the naive estimate
+dag <- dagitty('dag {
+  pop_up_or_rand_enc -> new_feature
+  new_feature -> time_spent_and_revenue
+}')
+
+plot(dag)
+
+# Compute the naive, biased estimate
+# Naive comparison
+E_0 <- mean(rand_enc[rand_enc$rand_enc==0, ]$time_spent) # control group
+E_1 <- mean(rand_enc[rand_enc$rand_enc==1, ]$time_spent) # treatment group
+E_1 - E_0
+naive_estimate <- lm(used_ftr ~ time_spent, data = rand_enc)
+
+## Regression of avg_purch on card membership
+summary(naive_estimate)
+
 naive_estimate <- lm(time_spent ~ rand_enc + used_ftr, data = rand_enc)
 summary(naive_estimate)
 
-# Check assumptions using correlations or plots
-cor(rand_enc$time_spent, rand_enc$rand_enc)
-cor(rand_enc$used_ftr, rand_enc$rand_enc)
-cor(rand_enc$time_spent, rand_enc$used_ftr)
 
-plot(rand_enc$time_spent ~ rand_enc$rand_enc)
-plot(rand_enc$time_spent ~ rand_enc$used_ftr)
-plot(rand_enc$used_ftr ~ rand_enc$rand_enc)
+# Check assumption using correlations
+cor(rand_enc) %>% round(2)
+plot(cor(rand_enc))
+
+print("Estimated variabel is an adequate procedure is this case, shown by the high >0.7 correlation factor")
 
 # Instrumental Variable Estimation (2SLS)
-iv_estimate <- ivreg(time_spent ~ used_ftr | rand_enc ~ instrument, data = rand_enc)
+## First stage
+first_stage <- lm(used_ftr ~ rand_enc, data = rand_enc)
+summary(first_stage)
+
+## Predicted 'probabilities' from first stage
+pred_fs <- predict(first_stage)
+
+## Create table with predictions and actual decisions
+pred_vs_actl <- tibble(
+  pred = pred_fs,
+  actl = rand_enc$used_ftr
+)
+
+# Plot predictions vs original
+ggplot(pred_vs_actl, aes(x = pred, y = actl, color = as.factor(actl))) +
+  geom_jitter(alpha = .5) +
+  scale_color_discrete(labels = c("Control Group", "Treatment Group")) +
+  theme(legend.title = element_blank())
+
+# Second stage
+second_stage <- lm(rand_enc$time_spent ~ first_stage$fitted.values)
+summary(second_stage)
+
+# IV Estimate
+iv_estimate <- iv_robust(time_spent ~ used_ftr | rand_enc, data = rand_enc)
 summary(iv_estimate)
 
 # Compare naive and IV estimates
 summary(naive_estimate)
 summary(iv_estimate)
+
+print("In this case, naive estimation is considered bias based on two reasons. First, the result of time spent isn't just single factor based on new feature used. And this is proved by the second reason, in which R-squared has low value.")
+print("Naive estimate has a downward bias, by comparing its intercept value versus the difference between control and treatment group")
