--- a/content/01_journal/02_statistics.qmd
+++ b/content/01_journal/02_statistics.qmd
@@ -7,46 +7,50 @@ random_vars <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for 
 
 random_vars
 
-# Expected value, age
+# Mean, variance and standard deviation of age & income
+## Calculation
 expected_age <- mean(random_vars$age)
-expected_age
-
-# Expected value, income
 expected_income <- mean(random_vars$income)
-expected_income
-
-#variance, age
 variance_age <- var(random_vars$age)
-variance_age
-
-#variance, income
 variance_income <- var(random_vars$income)
-variance_income
-
-#std dev, age
 sd_age <- sd(random_vars$age)
-sd_age
-
-#std dev, income
 sd_income <- sd(random_vars$income)
-sd_income
+
+
+## Print result
+cat("Mean age :", expected_age, "\n")
+cat("Mean income :", expected_income, "\n")
+cat("Variance of age:", variance_age, "\n")
+cat("Variance of income:", variance_income, "\n")
+cat("Standard deviation of age:", sd_age, "\n")
+cat("Standard deviation of income:", sd_income, "\n")
+
 
 # Explain, if it makes sense to compare the standard deviations.
+print("Both standard deviations are used to see how wide the gaps for both age and income level. 
+      However, a sense of knowledge when comparing two standard deviations is a must, for example in this case, age is usually between 0-150 of human life span,
+      while income could be thousands, hundred thousand or millions depending of the currency used.")
 
-#Then, examine the relationship between both variables and compute
+# Then, examine the relationship between both variables and compute
+## Calculation
 covariance <- cov(random_vars$age, random_vars$income)
-covariance
 correlation <- cor(random_vars$age, random_vars$income)
-correlation
 
-#Compute the conditional expected value for
-# Calculate mean for age <= 18
+## Print Result
+cat("Covariance :", covariance, "\n")
+cat("Correlation :", correlation, "\n")
+
+# What measure is easier to interpret? Please discuss your interpretation.
+print("Correlation is much easier to interpret and intuitive since it spans between -1 and +1, so it is more convenient to see the relationship between parameters even when it has different unit and wide range of numbers")
+
+# Compute the conditional expected value for
+## Calculation
 mean_age_under_18 <- mean(random_vars$age[random_vars$age <= 18])
 mean_age_between_1865 <- mean(random_vars$age[random_vars$age >= 18 & random_vars$age <= 65])
 mean_age_above_65 <- mean(random_vars$age[random_vars$age >= 65])
 
-# Print the result
-cat("Mean age for age <= 18:", mean_age_under_18)
-cat("Mean age for 18<age<65:", mean_age_between_1865)
-cat("Mean age for age >= 65:", mean_age_above_65)
-:::
+## Print the result
+cat("Mean income for age <= 18:", mean_age_under_18, "\n")
+cat("Mean income for 18<age<65:", mean_age_between_1865, "\n")
+cat("Mean income for age >= 65:", mean_age_above_65, "\n")
+
