--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -1,39 +1,41 @@
 ---
 title: "Regression and Statistical Inference"
 ---
-# Install and Load Libraries
-install.packages("tidyverse")
-install.packages("dplyr")
+# Load the Library
 
 library(dplyr)
 library(tidyverse)
 
-# Load the Data
+# Load the Data & Check Dimension
 car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
-
-# Analytics
-car_prices
 dim(car_prices)
 
-head (car_prices)
+# data types do you see? How do numbers differ from strings regarding their data type?
+head(car_prices)
+str(car_prices)
 
-summary(car_prices)
+print("Numbers are described by 'num', while strings are described by 'chr'. In this dataset, another data type is also exist, which is boolean described by 'logic'")
 
-# Include all potential regressors
+# Run a linear regression. You want to explain what factors are relevant for the pricing of a car.
+## Include all potential regressors
 lm_all <- lm(price ~ ., data = car_prices)
 summary(lm_all)
 
-#signifance <0.05
-#choose one regressor : perubahan sekian unit (liat intercept) sbg coefficient/ slope to prices
-#peak rpm is a significant regressor, p < 0.0001
+# 	Choose one regressor (Data type, Effect of changing value to the price, whether it is statistically significant
+print("One regressor chosen is peakrpm. It has decimal (numbers) data type. Its effect on the price can be shown by its slope (coefficient).
+      For 1 peak rpm higher, it increases the price by 2.536 unit price. The peak rpm effect on price is statistically significant, indicated by p-value much lower than <0.05.
+      The p-value of peak rpm is 0.000108, which means it has highly significant effect on price.")
 
+#  Add a variable seat_heating to the data and assign a value TRUE for all observations. What coefficient do you get for the new variable seat_heating and how can you explain it?
 
 car_prices <- car_prices %>%
   mutate(seat_heating = TRUE)
 
 lm_all <- lm(price ~ ., data = car_prices)
 summary(lm_all)
-
-
 lm_seatheating <- lm(price ~ seat_heating, data = car_prices)
 summary(lm_seatheating)
+
+print ("Coefficient on seat heating is not available since all cars have seat heating but it doesn't increase the price.
+       Mathematically, changes in price (as Y axis), but no changes in seat heating (as X axis) would result delta Y/ delta X not available N/A since
+       any numbers divided by 0 is undefined.")
