--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -1,3 +1,16 @@
+---
+title: "Probablity Theory"
+subtitle: "Assignment 1 - Probablity Tree"
+format:
+  html:
+    self-contained: true
+editor: visual    
+---
+
+{r}
+#| label: load-packages
+#| include: false
+
 # Assignment 1 - Probability Tree
 ## Given probabilities
 P_S <- 0.3
