--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -1,15 +1,22 @@
 ---
 title: "Probablity Theory"
-subtitle: "Assignment 1 - Probablity Tree"
+subtitle: "Assignment 1 - Probablity Tree ; Assignment 2 - Set Theory ; Assignment 3 - Bayesian Theorem"
 format:
   html:
     self-contained: true
-editor: visual    
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute: 
+  warning: false
 ---
 
-{r}
+```{r}
+#| eval: false
+#| echo: false
 #| label: load-packages
 #| include: false
+#| message: false
+#| warning: false
 
 # Assignment 1 - Probability Tree
 ## Given probabilities
@@ -70,13 +77,13 @@ P_Alarm_given_not_Faulty_prod <- 0.01
 P_Faulty_prod <- 0.04
 P_not_Faulty_prod <- 1 - P_Faulty_prod
 
-<!--  Calculate P(Alarm) --> 
+##  Calculate P(Alarm)
 P_Alarm <- P_Alarm_given_Faulty_prod * P_Faulty_prod + P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod
 
-<!-- (1) Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem -->
+## (1) Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem
 P_not_Faulty_prod_given_Alarm <- (P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod) / P_Alarm
 
-<!-- (2) Calculate P(Faulty_prod | Alarm) using Bayes' Theorem -->
+## (2) Calculate P(Faulty_prod | Alarm) using Bayes' Theorem
 P_Faulty_prod_given_Alarm <- (P_Alarm_given_Faulty_prod * P_Faulty_prod) / P_Alarm
 
 ## Print the results
@@ -90,4 +97,4 @@ percentage_Faulty_prod_given_Alarm <- round(P_Faulty_prod_given_Alarm * 100, 2)
 cat("These results show that in case the alarm is triggered, there is a possibility of about", 
     percentage_not_Faulty_prod_given_Alarm, "% that the product is flawless and a probability of", 
     percentage_Faulty_prod_given_Alarm, "% that the product is faulty.", "\n")
-
+```
