--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -10,16 +10,13 @@ execute:
   warning: false
 ---
 
-```{r}
-#| eval: false
-#| echo: false
-#| label: load-packages
-#| include: false
-#| message: false
-#| warning: false
-
 # Assignment 1 - Probability Tree
-## Given probabilities
+```{r}
+#| echo: false
+#| output: false
+
+
+# Given probabilities
 P_S <- 0.3
 P_not_S <- 0.7
 
@@ -29,71 +26,103 @@ P_not_T_given_S <- 0.8
 P_T_given_not_S <- 0.6
 P_not_T_given_not_S <- 0.4
 
-## Compute probabilities
+# Compute probabilities
 P_T_and_S <- P_S * P_T_given_S
 P_T_and_not_S <- P_not_S * P_T_given_not_S
 P_not_T_and_S <- P_S * P_not_T_given_S
 P_not_T_and_not_S <- P_not_S * P_not_T_given_not_S
 
-## Sum of all four probabilities
+# Sum of all four probabilities
 sum_of_probabilities <- P_T_and_S + P_T_and_not_S + P_not_T_and_S + P_not_T_and_not_S
+```
 
+Print the result
+
+```{r}
+#| output: asis
 ## Print the results
 cat("P(T ∩ S):", P_T_and_S, "\n")
 cat("P(T ∩ ~S):", P_T_and_not_S, "\n")
 cat("P(~T ∩ S):", P_not_T_and_S, "\n")
 cat("P(~T ∩ ~S):", P_not_T_and_not_S, "\n")
 cat("Sum of all four probabilities:", sum_of_probabilities, "\n")
+```
 
 # Assignment 2 - Set Theory
-## From Diagram Venn
+
+```{r}
+#| echo: false
+#| output: false
+
+# From Diagram Venn
 
 library(knitr)
 image_url <- "https://owmork.github.io/causal_ds/content/fundamentals/01_a_prob_files/figure-html/unnamed-chunk-5-1.png"
 include_graphics(image_url)
 
-## Given data
+# Given data
 all_three_devices <- 5
 at_least_two_devices <- 73+33+88
 only_one_device <- 278+423+100
 
-## Total number of customers
+# Total number of customers
 total_customers <- all_three_devices + at_least_two_devices + only_one_device
 
-## Calculate percentages
+# Calculate percentages
 percentage_all_three_devices <- (all_three_devices / total_customers) * 100
 percentage_at_least_two_devices <- (at_least_two_devices / total_customers) * 100
 percentage_only_one_device <- (only_one_device / total_customers) * 100
+```
 
-## Print the results
+```{r}
+#| output: asis
+# Print the results
 cat("Percentage of customers using all three devices:", percentage_all_three_devices, "%\n")
 cat("Percentage of customers using at least two devices:", percentage_at_least_two_devices, "%\n")
 cat("Percentage of customers using only one device:", percentage_only_one_device, "%\n")
+```
+
 
 # Assignment 3 - Bayesian Theorem
-## Given probabilities
+
+```{r}
+#| echo: false
+#| output: false
+# Given probabilities
 P_Alarm_given_Faulty_prod <- 0.97
 P_Alarm_given_not_Faulty_prod <- 0.01
 P_Faulty_prod <- 0.04
 P_not_Faulty_prod <- 1 - P_Faulty_prod
 
-##  Calculate P(Alarm)
+#  Calculate P(Alarm)
 P_Alarm <- P_Alarm_given_Faulty_prod * P_Faulty_prod + P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod
 
-## (1) Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem
+# (1) Calculate P(~Faulty_prod | Alarm) using Bayes' Theorem
 P_not_Faulty_prod_given_Alarm <- (P_Alarm_given_not_Faulty_prod * P_not_Faulty_prod) / P_Alarm
 
-## (2) Calculate P(Faulty_prod | Alarm) using Bayes' Theorem
+# (2) Calculate P(Faulty_prod | Alarm) using Bayes' Theorem
 P_Faulty_prod_given_Alarm <- (P_Alarm_given_Faulty_prod * P_Faulty_prod) / P_Alarm
+```
 
-## Print the results
+
+```{r}
+#| output: asis
+# Print the results
 cat("a. P(~Faulty_prod | Alarm):", P_not_Faulty_prod_given_Alarm, "\n")
 cat("b. P(Faulty_prod | Alarm):", P_Faulty_prod_given_Alarm, "\n")
+```
 
-## Fill in the gaps in the sentence
+```{r}
+#| echo: false
+#| output: false
+# Fill in the gaps in the sentence
 percentage_not_Faulty_prod_given_Alarm <- round(P_not_Faulty_prod_given_Alarm * 100, 2)
 percentage_Faulty_prod_given_Alarm <- round(P_Faulty_prod_given_Alarm * 100, 2)
+```
 
+
+```{r}
+#| output: asis
 cat("These results show that in case the alarm is triggered, there is a possibility of about", 
     percentage_not_Faulty_prod_given_Alarm, "% that the product is flawless and a probability of", 
     percentage_Faulty_prod_given_Alarm, "% that the product is faulty.", "\n")
