--- a/content/01_journal/01_probability.qmd
+++ b/content/01_journal/01_probability.qmd
@@ -3,7 +3,7 @@ title: "Probablity Theory"
 subtitle: "Assignment 1 - Probablity Tree ; Assignment 2 - Set Theory ; Assignment 3 - Bayesian Theorem"
 format:
   html:
-    self-contained: false
+    self-contained: true
 author: "Stephanus Steven Halimkesuma"
 toc: true
 execute: 
@@ -11,9 +11,10 @@ execute:
 ---
 
 # Assignment 1 - Probability Tree
+
 ```{r}
 #| echo: false
-#| output: false
+#| output: asis
 
 
 # Given probabilities
