--- a/content/01_journal/02_statistics.qmd
+++ b/content/01_journal/02_statistics.qmd
@@ -1,13 +1,30 @@
 ---
 title: "Statistical Concepts"
+format:
+  html:
+    self-contained: false
+author: "Stephanus Steven Halimkesuma"
+toc: true
+theme: "cosmo"
+execute: 
+  warning: false
 ---
+
+
+# Read data
+```{r}
+#| output: asis
 
 
 random_vars <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/random_vars.rds")
 
 random_vars
+```
+
 
 # Mean, variance and standard deviation of age & income
+```{r}
+#| output: asis
 ## Calculation
 expected_age <- mean(random_vars$age)
 expected_income <- mean(random_vars$income)
@@ -24,14 +41,19 @@ cat("Variance of age:", variance_age, "\n")
 cat("Variance of income:", variance_income, "\n")
 cat("Standard deviation of age:", sd_age, "\n")
 cat("Standard deviation of income:", sd_income, "\n")
-
+```
 
 # Explain, if it makes sense to compare the standard deviations.
+```{r}
+#| output: asis
 print("Both standard deviations are used to see how wide the gaps for both age and income level. 
       However, a sense of knowledge when comparing two standard deviations is a must, for example in this case, age is usually between 0-150 of human life span,
       while income could be thousands, hundred thousand or millions depending of the currency used.")
+```
 
 # Then, examine the relationship between both variables and compute
+```{r}
+#| output: asis
 ## Calculation
 covariance <- cov(random_vars$age, random_vars$income)
 correlation <- cor(random_vars$age, random_vars$income)
@@ -39,11 +61,17 @@ correlation <- cor(random_vars$age, random_vars$income)
 ## Print Result
 cat("Covariance :", covariance, "\n")
 cat("Correlation :", correlation, "\n")
+```
 
+```{r}
+#| output: asis
 # What measure is easier to interpret? Please discuss your interpretation.
 print("Correlation is much easier to interpret and intuitive since it spans between -1 and +1, so it is more convenient to see the relationship between parameters even when it has different unit and wide range of numbers")
+```
 
 # Compute the conditional expected value for
+```{r}
+#| output: asis
 ## Calculation
 mean_age_under_18 <- mean(random_vars$age[random_vars$age <= 18])
 mean_age_between_1865 <- mean(random_vars$age[random_vars$age >= 18 & random_vars$age <= 65])
@@ -53,4 +81,4 @@ mean_age_above_65 <- mean(random_vars$age[random_vars$age >= 65])
 cat("Mean income for age <= 18:", mean_age_under_18, "\n")
 cat("Mean income for 18<age<65:", mean_age_between_1865, "\n")
 cat("Mean income for age >= 65:", mean_age_above_65, "\n")
-
+```
