--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -1,6 +1,16 @@
 ---
 title: "Regression and Statistical Inference"
+format:
+  html:
+    self-contained: false
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute: 
+  warning: false
 ---
+
+```{r}
+#| output: asis
 # Load the Library
 
 library(dplyr)
@@ -39,3 +49,4 @@ summary(lm_seatheating)
 print ("Coefficient on seat heating is not available since all cars have seat heating but it doesn't increase the price.
        Mathematically, changes in price (as Y axis), but no changes in seat heating (as X axis) would result delta Y/ delta X not available N/A since
        any numbers divided by 0 is undefined.")
+```
