--- a/content/01_journal/03_regression.qmd
+++ b/content/01_journal/03_regression.qmd
@@ -3,12 +3,12 @@ title: "Regression and Statistical Inference"
 format:
   html:
     self-contained: false
-author: "Stephanus Steven Halimkesuma"
 toc: true
-execute: 
-  warning: false
+theme: "cosmo"
 ---
 
+
+# Read data
 ```{r}
 #| output: asis
 # Load the Library
@@ -18,25 +18,41 @@ library(tidyverse)
 
 # Load the Data & Check Dimension
 car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
+head(car_prices)
 dim(car_prices)
+```
 
 # data types do you see? How do numbers differ from strings regarding their data type?
+```{r}
+#| output: asis
+car_prices <- readRDS("E:/Master Study/TUHH/Wise 23-24/Causal Data Science for Business Analytics/Causal_Data_Science_Data/car_prices.rds")
 head(car_prices)
 str(car_prices)
 
 print("Numbers are described by 'num', while strings are described by 'chr'. In this dataset, another data type is also exist, which is boolean described by 'logic'")
+```
 
 # Run a linear regression. You want to explain what factors are relevant for the pricing of a car.
-## Include all potential regressors
+```{r}
+#| output: asis
+
+# Include all potential regressors
 lm_all <- lm(price ~ ., data = car_prices)
 summary(lm_all)
+```
 
 # 	Choose one regressor (Data type, Effect of changing value to the price, whether it is statistically significant
+```{r}
+#| output: asis
+
 print("One regressor chosen is peakrpm. It has decimal (numbers) data type. Its effect on the price can be shown by its slope (coefficient).
       For 1 peak rpm higher, it increases the price by 2.536 unit price. The peak rpm effect on price is statistically significant, indicated by p-value much lower than <0.05.
       The p-value of peak rpm is 0.000108, which means it has highly significant effect on price.")
+```
 
 #  Add a variable seat_heating to the data and assign a value TRUE for all observations. What coefficient do you get for the new variable seat_heating and how can you explain it?
+```{r}
+#| output: asis
 
 car_prices <- car_prices %>%
   mutate(seat_heating = TRUE)
