--- a/content/01_journal/05_dag.qmd
+++ b/content/01_journal/05_dag.qmd
@@ -1,7 +1,19 @@
 ---
 title: "Directed Acyclic Graphs"
+format:
+  html:
+    self-contained: false
+author: "Stephanus Steven Halimkesuma"
+toc: true
+execute:
+  echo: false
+  eval: false
+  warning: false
 ---
 
+```{r}
+#| output: asis
+npm install -g yaml-lint
 # Load required libraries
 library(ggplot2)
 library(dplyr)
